# rusty-ws-server

./: .dockerignore  Cargo.toml  Dockerfile  README.MD
assets/: map.json
scripts/: test-server.js
src/: main.rs
src/core/: args.rs  mod.rs  server.rs  session.rs  update.rs
src/game_object/: base.rs  player.rs
src/handler/: handler_auth.rs  handler_echo.rs  handler_ping.rs  mod.rs
src/msg/: mod.rs  msg_auth.rs  msg_echo.rs  msg_in.rs  msg_out.rs
src/network_handler/: handler_auth.rs  handler_ping.rs
src/network_message/: msg_in.rs  msg_out.rs  msg_ping.rs
src/object/: base.rs  mod.rs  player.rs
src/system/: map.rs
