[package]
name = "rusty-ws-server"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
log = "0.4.20"
env_logger = "0.11.3"
rand = "0.8.5"
async-trait = "0.1.80"

tokio = { version = "1.32.0", features = ["io-std", "macros", "net", "rt-multi-thread", "time", "sync", "signal"] }
warp = "0.3.5"
fred = "9.0.3"

futures = { version = "0.3.28", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rmp-serde = "1.3.0"

clap = { version = "4.4.5", features = ["derive"] }
num_cpus = "1.0"